------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes.

Al
------------------------------------------------------------------------------
Mon Oct 05 11:15 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Replaced functions cli() and sti() with single asm instruction
	  macros icli() and isti(), which saves 96 bytes.

	* Moved Makefile dependency cleaning to distclean as I was fed up
	  of doing make dep so much.

Sun Sep 25 12:37 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Removed redundant code from the dircon driver.

Sat Sep 26 02:07 CET 1998   Simon Weijgers  <mbit@mbit.doa.org>
	
	* Added a ### Dependencie line at the end of the Makefiles
	  in fs/ and fs/elksfs/.

Sat Sep 26 01:50 CET 1998   Simon Weijgers  <mbit@mbit.doa.org>
	
	* Fixed various things (typos etc) in fs/exec.c and
	  include/linuxmt/msdos.h to make .exe-support compilable.

Sat Sep 26 00:32 CET 1998   Simon Weijgers  <mbit@mbit.doa.org>
	
	* "Fixed" Documentation/Configure.help so that help text
	  fits in the menuconfig help-window line length.

Fri Sep 25 15:30 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixed a some bugs pointed out by Marnix Coppens <maco@telindus.be>

	  Changed code at 147 in arch/i86/mm/user.c in strlen_fromfs
	  which should use es:di to point to a string rather than ds:si.

	  Fixed code in fs/exec.c which uses file.f_op before it has been
	  checked.
	  Replaced code that clears bss in exec() to a call to fmemset() but
	  this did not work. fmemset() may be buggy.

	  Fixed chq_erase() so it zeroes len, not size, and ifdef'd it out.

	  Tweaked getch and addch so they deal with waiting in less code,
	  and modified checks for q->size - 1 into checks for q->size.

	  ifdef'd out chq_delch

Thu Sep 24 23:28 CET 1998   Simon Weijgers  <mbit@mbit.doa.org>
