@@ -54,7 +54,7 @@ access		+33	2
 nice		34	1
 sleep		35	1
 sync		+36	0	 
-kill		37	2	 
+kill		+37	2	 
 rename		+38	2	 
 mkdir		+39	2	 
 rmdir		+40	1	 
