@@ -4,6 +4,10 @@ the top of this file before committing any changes.
 
 Al
 ------------------------------------------------------------------------------
+Thu Oct 08 20:40 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Added very simple signal support.
+
 Mon Oct 05 11:15 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Replaced functions cli() and sti() with single asm instruction
